test_programs/compile_failure/noirc_frontend_tests_check_trait_duplicate_implementation_with_alias/src/main.nr

    trait Default2 {
    }

    struct MyStruct {
    }

    type MyType = MyStruct;

    impl Default2 for MyStruct {
    }

    impl Default2 for MyType {
    }

    fn main() {
        let _ = MyStruct {}; // silence MyStruct never constructed warning
    }
    